# easy_sast

./: .coveragerc  .gitignore  .gitlint  .hadolint.yaml  .pylintrc  .truffleHog-exclude.txt  .yamllint  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config_example.yml  easy_sast_example.yml  main.py  mypy.ini  requirements-to-freeze.txt  requirements.txt  security.txt  setup.cfg  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  commit.yml  docker-ci.yml  pr.yml  release.yml  security.yml
reports/: bandit_report.json  coverage.xml  semgrep_report.json
reports/htmlcov/: index.html  main_py.html  status.json  veracode___init___py.html  veracode_api_py.html  veracode_check_compliance_py.html  veracode_config_py.html  veracode_constants_py.html  veracode_options_py.html  veracode_submit_artifacts_py.html  veracode_utils_py.html  veracode_veracode_py.html
tests/: constants.py  test_api.py  test_api_classes.py  test_api_functions.py  test_check_compliance.py  test_config.py  test_main.py  test_submit_artifacts.py  test_utils.py
veracode/: __init__.py  api.py  check_compliance.py  config.py  constants.py  requirements-to-freeze.txt  requirements.txt  submit_artifacts.py  utils.py
