[metadata]
author = 'Seiso'
description = 'A docker container for use in integration pipelines to submit an application's build artifacts to a static analysis tool.',
description-file = 'README.md',
license = 'BSD-3-Clause',
license_files = 'LICENSE',
name = 'easy_sast',
url = 'https://github.com/SeisoLLC/easy_sast',

[options]
python_requires = '>= 3.8, < 4',
test_suite = 'tests',

[semantic_release]
version_variable = 'veracode/__init__.py:__version__',
